--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<%- include('headpart.ejs')%>
-<body>
+  </head>
+  <%- include('headpart.ejs')%>
+  <body>
     <form action="/oauth/local" method="post">
-        <input type="text" name="id">
-        <input type="password" name="pw">
-        <button type="submit">로그인</button>
+      <input type="text" name="id" />
+      <input type="password" name="pw" />
+      <button type="submit">로그인</button>
     </form>
     <form action="/oauth/naver" method="get">
-        <button type="submit">네이버로그인</button>
+      <button type="submit">네이버로그인</button>
     </form>
     <form action="/oauth/kakao" method="get">
-        <button type="submit">카카오로그인</button>
+      <button type="submit">카카오로그인</button>
     </form>
     <form action="/oauth/google" method="get">
-        <button type="submit">카카오로그인</button>
+      <button type="submit">구글로그인</button>
     </form>
 
     <form action="/signup" method="get">
-        <button type="submit">회원가입가기</button>
+      <button type="submit">회원가입가기</button>
     </form>
 
     <form action="/home" method="get">
-        <button type="submit">돌아가기</button>
+      <button type="submit">돌아가기</button>
     </form>
-</body>
+  </body>
 </html>
