--- a/views/board.ejs
+++ b/views/board.ejs
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>홈</title>
-  </head>
-  <%- include('headpart.ejs')%>
-
-  <body>
+<html>
+    <%-include('headpart.ejs')%>
+    <body>
     <% if(board.type === 'none') { %>
         <%=board.body%>
-    <% } else if(board.type ==='images') { %>
-        <% for(let img of board.mediapath) {%>
+    <% } else if(board.type === 'images') { %>
+        <% for(let img of board.mediapath) { %>
             <img src=<%=`\\${img}`%>>
         <% } %>
-        <% } else { %>
-            <video src=<%=`\\${board.mediapath[0]}`%>>
-        <% } %>      
-  </body>
+    <% } else { %>
+        <video src=<%=`\\${board.mediapath[0]}`%>>
+    <% } %>
+    <ul style="list-style: none; padding:0;">
+        <% for(let tag of board.hashtags) { %>
+            <a href=<%=`/boards?tokens=${tag}`%>>
+                <li style="display: inline-block; margin-right:10px;">
+                    <%=`#${tag}`%>
+                </li>
+            </a>
+        <% } %>
+    </ul>
+    <a href=<%=`/boards?page=${page}`%>>목록</a>
+    </body>
+</html>
