--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<%- include('headpart.ejs')%>
-<body>
-    <form action="/signup" method="post">
-        <input type="text" name="id">
-        <input type="password" name="pw">
-        <button type="submit">회원가입</button>
-    </form>
-    <form action="/login" method="get">
-        <button type="submit">돌아가기</button>
-    </form>
-</body>
+<html>
+    <%-include('headpart.ejs')%>
+    <body>
+        <form action="/signup" method="post">
+            <input type="text" name="id">
+            <input type="password" name="pw">
+            <button type="submit">회원가입</button>
+        </form>
+        <form action="/login" method="get">
+            <button type="submit">돌아가기</button>
+        </form>
+    </body>
 </html>
