--- a/views/boardwrite.ejs
+++ b/views/boardwrite.ejs
@@ -18,15 +18,15 @@
         <button type="button" onclick="toggle(this)">동영상</button>
         <form class="choose" action="/videos/upload" method="post" 
         enctype="multipart/form-data">
+            <input type="text" name="title"><br>
             <input type="text" name="inner"><br>
-            <input type="text" name="hash"><br>
             <input type="file" name="video"><br>
             <button type="submit">저장</button>
         </form>
         <form action="/images/upload" method="post" 
         enctype="multipart/form-data">
+            <input type="text" name="title"><br>
             <input type="text" name="inner"><br>
-            <input type="text" name="hash"><br>
             <input type="file" name="images" multiple><br>
             <button type="submit">저장</button>
         </form>
